...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerFacility"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dropdown"
        android:dropDownWidth="match_parent"
...
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/facility3"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:visibility="invisible"

    android:background="@drawable/layout_border"
    app:layout_constraintEnd_toEndOf="parent"
...
