...
                    style="@style/home_arrow_theme"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/home_review_button"
                    style="@style/home_button_browse_theme"
                    android:layout_width="165dp"
                    android:layout_height="90dp"
                    android:text="Browse"
                    android:textColor="@color/home_secondary_text_color"
                    android:elevation="5dp"
...
